Basic structure and styling done

--- a/index.html
+++ b/index.html
@@ -1,28 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Automation Attendance System</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
         <h1>Automation Attendance System using CCTV</h1>
     </header>
 
-    <section class="about">
-        <h2>About Us</h2>
+    <div class="hero grid grid--2-cols">
+        <h1>Touchless <span>Face Recognition Attendence System</span> Centralized and Foolproof.</h1>
+
+        <img src="https://miro.medium.com/v2/resize:fit:2000/1*DPNoWJ3Au35Fw58Sn2oj1w.png" alt="Man Face Recognize">
+    </div>
+
+    <div>
+        <p>________ is designed for <span>Contract</span> & <span>Designed Workforce.</span></p>
+    </div>
+
+    <div class="github">
+        <a href="https://github.com/Prince-Sharma-07/Solution-Challenge" target="_blank" class="github-btn">View on
+            GitHub</a>
+    </div>
+
+    <section class="motive">
+        <h2>What Will It Do!</h2> <br>
         <p>This system automates attendance tracking using CCTV, reducing manual effort and increasing accuracy.</p>
     </section>
 
-    <div class="github">
-        <a href="https://github.com/Prince-Sharma-07/Solution-Challenge" target="_blank" class="github-btn">View on GitHub</a>
-    </div>
+    <!-- ///////////////////////////////////////////////// -->
+    <section class="section-how" id="how">
+        <div class="container">
+            <span class="subheading">How it works</span>
+            <h2 class="heading-secondary">Your daily dose of health in 3 simple steps</h2>
+        </div>
+
+        <div class="container grid grid--2-cols grid--center-v">
+            <!-- STEP 01 -->
+            <div class="step-text-box">
+                <p class="step-number">01</p>
+                <h3 class="heading-tertiary">Tell us what you like (and what not)</h3>
+                <p class="step-description">Never again waste time thinking about what to eat! Omnifood AI will create a
+                    100%
+                    personalized weekly meal plan just for you. It makes sure you get all the nutrients and vitamins you
+                    need,
+                    no matter what diet you follow!</p>
+            </div>
+            <div class="step-img-box">
+                <img src="img/app/app-screen-1.png" class="step-img" alt="iPhone app preferences selection screen">
+            </div>
+
+            <!-- STEP 02 -->
+            <div class="step-img-box">
+                <img src="img/app/app-screen-2.png" class="step-img" alt="iPhone app meal approving plan screen">
+            </div>
+            <div class="step-text-box">
+                <p class="step-number">02</p>
+                <h3 class="heading-tertiary">Tell us what you like (and what not)</h3>
+                <p class="step-description">Never again waste time thinking about what to eat! Omnifood AI will create a
+                    100%
+                    personalized weekly meal plan just for you. It makes sure you get all the nutrients and vitamins you
+                    need,
+                    no matter what diet you follow!</p>
+            </div>
+
+            <!-- STEP 03 -->
+            <div class="step-text-box">
+                <p class="step-number">03</p>
+                <h3 class="heading-tertiary">Receive meals at convenient time</h3>
+                <p class="step-description">Best chefs in town will cook your selected meal every day, and we will
+                    deliver it
+                    to your door whenever works best for you. You can change delivery schedule and address daily!
+
+                </p>
+            </div>
+            <div class="step-img-box">
+                <img src="img/app/app-screen-3.png" class="step-img" alt="iPhone app delivery screen">
+            </div>
+        </div>
+    </section>
+    <!-- ///////////////////////////////////////////////// -->
 
     <marquee class="developer">
-        Developed by: Prince Sharma | Vasvi Saini
+        Developed by: Prince Sharma | Vasvi Saini | Vaibhav Dhiman | Lavish Kamboj | Lakshay Tyagi | Anishk Verma
     </marquee>
 
 </body>
+
 </html>
