--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <!-- ///////////////////////////////////////////////// -->
 
     <marquee class="developer">
-        Developed by: Prince Sharma | Vasvi Saini | Vaibhav Dhiman | Lavish Kamboj | Lakshay Tyagi | Anishk Verma
+        Developed by: Prince Sharma | Vasvi Saini
     </marquee>
 
 </body>
